--- a/SceytChatUiKit/src/main/res/values/colors.xml
+++ b/SceytChatUiKit/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="sceyt_color_background">#FFFFFF</color>
     <color name="sceyt_color_background_secondary">#F1F2F6</color>
     <color name="sceyt_color_background_sections">#FFFFFF</color>
-    <color name="sceyt_color_border">#E4E6EE</color> <!--divider in light mode was F1F2F6 -->
+    <color name="sceyt_color_border">#E4E6EE</color>
     <color name="sceyt_color_icon_secondary">#A0A1B0</color>
     <color name="sceyt_color_icon_inactive">#C6C7D0</color>
     <color name="sceyt_color_overlay_background">#80000000</color>
