Fix message input view styles.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -17,6 +17,8 @@
         android:id="@+id/rvAttachments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:background="@color/sceyt_color_background"
         android:clipToPadding="false"
         android:orientation="horizontal"
         android:paddingHorizontal="16dp"
@@ -71,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/sceyt_bg_corners_20"
-            android:backgroundTint="@color/sceyt_color_gray_themed"
+            android:backgroundTint="@color/sceyt_color_surface_1"
             android:gravity="center_vertical"
             android:hint="@string/sceyt_write_a_message"
             android:includeFontPadding="false"
@@ -80,8 +82,8 @@
             android:minHeight="35dp"
             android:paddingHorizontal="13dp"
             android:paddingVertical="8dp"
-            android:textColor="@color/sceyt_color_black_themed"
-            android:textColorHint="@color/sceyt_color_hint"
+            android:textColor="@color/sceyt_color_text_primary"
+            android:textColorHint="@color/sceyt_color_text_footnote"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/icSendMessage"
@@ -128,8 +130,9 @@
         android:id="@+id/btnJoin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/sceyt_color_bg_secondary_themed"
+        android:background="@color/sceyt_color_surface_1"
         android:fontFamily="@font/roboto_medium"
+        android:foreground="?attr/selectableItemBackground"
         android:gravity="center"
         android:paddingVertical="15dp"
         android:text="@string/sceyt_join"
@@ -146,8 +149,9 @@
         android:id="@+id/btnClearChat"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/sceyt_bg_ripple"
+        android:background="@color/sceyt_color_background"
         android:fontFamily="@font/roboto_medium"
+        android:foreground="?attr/selectableItemBackground"
         android:gravity="center"
         android:paddingVertical="15dp"
         android:text="@string/sceyt_clear_chat"
