--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
@@ -7,8 +7,8 @@
         <attr name="sceytMessageInputVoiceRecordIcon" format="reference" />
         <attr name="sceytMessageInputSendVoiceRecordIcon" format="reference" />
         <attr name="sceytMessageInputHintText" format="string" localization="suggested" />
-        <attr name="sceytMessageInputTextColor" format="reference" />
-        <attr name="sceytMessageInputHintTextColor" format="reference" />
-        <attr name="sceytMessageInputUserNameTextColor" format="reference" />
+        <attr name="sceytMessageInputTextColor" format="reference|color" />
+        <attr name="sceytMessageInputHintTextColor" format="reference|color" />
+        <attr name="sceytMessageInputBackgroundColor" format="reference|color" />
     </declare-styleable>
 </resources>
