--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_input_video_attachment.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_input_video_attachment.xml
@@ -50,7 +50,7 @@
             android:tint="@color/sceyt_color_on_primary"
             app:layout_constraintBottom_toBottomOf="@id/imageCont"
             app:layout_constraintStart_toStartOf="@id/imageCont"
-            app:srcCompat="@drawable/cancel" />
+            app:srcCompat="@drawable/sceyt_ic_cancel" />
 
     </FrameLayout>
 
