--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_or_reply_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_or_reply_message.xml
@@ -43,9 +43,9 @@
             android:id="@+id/fileAttachment"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/sceyt_bg_circle"
             android:scaleType="center"
             android:visibility="gone"
-            android:background="@drawable/sceyt_bg_circle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -103,6 +103,7 @@
         android:id="@+id/icCancelReply"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="6dp"
         android:scaleType="center"
         android:tint="#898B99"
