--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/sceyt_color_border"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/rvAttachments"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,6 +30,13 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/sceyt_item_input_image_attachment" />
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/groupAttachments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:constraint_referenced_ids="viewTop,rvAttachments" />
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/layoutReplyOrEditMessage"
         android:name="com.sceyt.chatuikit.presentation.uicomponents.messageinput.fragments.EditOrReplyMessageFragment"
@@ -38,7 +46,8 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvAttachments" />
+        app:layout_constraintTop_toBottomOf="@+id/rvAttachments"
+        app:layout_goneMarginTop="0dp" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/layoutLinkPreview"
@@ -143,7 +152,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/viewTop" />
+        app:layout_constraintTop_toBottomOf="@id/viewTop"
+        tools:ignore="UnusedAttribute" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/btnClearChat"
@@ -161,7 +171,8 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="UnusedAttribute" />
 
     <include
         android:id="@+id/layoutInputSearchResult"
