FIx UI issue in MessageInputView. Fix issue in ConversationHeaderView.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
@@ -6,6 +6,7 @@
         <attr name="sceytMessageInputSendIcon" format="reference" />
         <attr name="sceytMessageInputVoiceRecordIcon" format="reference" />
         <attr name="sceytMessageInputSendVoiceRecordIcon" format="reference" />
+        <attr name="sceytMessageInputLinkIcon" format="reference" />
         <attr name="sceytMessageInputHintText" format="string" localization="suggested" />
         <attr name="sceytMessageInputTextColor" format="reference|color" />
         <attr name="sceytMessageInputHintTextColor" format="reference|color" />
