--- a/SceytChatUiKit/src/main/res/layout/sceyt_recorded_voice_presenter.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_recorded_voice_presenter.xml
@@ -10,7 +10,7 @@
     android:focusable="true"
     android:paddingBottom="7dp">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/delete_voice_record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,8 +19,7 @@
         android:src="@drawable/sceyt_close_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
