--- a/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
@@ -151,7 +151,7 @@
                     android:layout_marginHorizontal="12dp"
                     android:lines="1"
                     android:text="@string/sceyt_online"
-                    android:textColor="@color/sceyt_color_gray_800"
+                    android:textColor="@color/sceyt_color_text_secondary"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="@id/avatar"
                     app:layout_constraintHorizontal_bias="0"
@@ -221,7 +221,7 @@
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="16dp"
                 android:text="@string/log_out"
-                android:textColor="@color/sceyt_color_red"
+                android:textColor="@color/sceyt_color_error"
                 android:textSize="@dimen/mediumTextSize"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/switchNotifications"
