--- a/SceytChatUiKit/src/main/res/layout/sceyt_dialog_direct_channel_actions.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_dialog_direct_channel_actions.xml
@@ -110,7 +110,7 @@
         android:paddingHorizontal="23dp"
         android:paddingVertical="10dp"
         android:text="@string/sceyt_delete_chat"
-        android:textColor="@color/sceyt_color_red"
+        android:textColor="@color/sceyt_color_error"
         android:textSize="@dimen/_12ssp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
