--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_channel.xml
@@ -122,7 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:inputType="textUri"
-                android:textColor="@color/sceyt_color_red"
+                android:textColor="@color/sceyt_color_error"
                 android:textSize="13sp"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
