--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_link.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_link.xml
@@ -16,7 +16,7 @@
         android:id="@+id/icLinkImage"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@color/sceyt_color_gray"
+        android:background="@color/sceyt_color_surface_1"
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
@@ -73,7 +73,7 @@
         android:layout_marginTop="2dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textColor="@color/sceyt_color_gray_secondary"
+        android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="13sp"
         android:visibility="gone"
         app:layout_constrainedWidth="true"
