--- a/examples/SceytDemoApp/src/main/res/layout/custom_fragment_channel_media.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/custom_fragment_channel_media.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sceyt_color_red">
+    android:background="@color/sceyt_color_error">
 
     <TextView
         android:id="@+id/rvFiles"
