--- a/SceytChatUiKit/src/main/res/layout/sceyt_dialog_channel_actions.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_dialog_channel_actions.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/sceyt_color_background_sections"
     android:orientation="vertical"
     android:paddingVertical="15dp">
 
