--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_or_reply_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_or_reply_message.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/sceyt_color_surface_1"
     android:visibility="gone"
     tools:visibility="visible">
 
