--- a/examples/SceytDemoApp/src/main/res/layout/fragment_channels.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_channels.xml
@@ -8,6 +8,7 @@
         android:id="@+id/layoutToolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/sceyt_color_primary"
         android:paddingHorizontal="16dp"
         app:layout_constraintTop_toTopOf="parent">
 
