--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_message_info.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_message_info.xml
@@ -100,6 +100,7 @@
                     app:constraint_referenced_ids="tvSizeHint,tvSize" />
 
                 <View
+                    android:id="@+id/divider"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="15dp"
