--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_attachments_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_attachments_message.xml
@@ -44,7 +44,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/avatar"
-        android:background="@drawable/sceyt_bg_inc_message">
+        android:background="@drawable/sceyt_bg_corners_18"
+        tools:backgroundTint="#F1F2F6">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvUserName"
@@ -91,11 +92,11 @@
             android:id="@+id/viewReply"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
             android:layout_marginTop="8dp"
             android:layout="@layout/sceyt_recycler_reply_container"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvForwarded"
             tools:visibility="visible" />
