--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
@@ -46,14 +46,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:background="@drawable/sceyt_bg_inc_message"
+        android:background="@drawable/sceyt_bg_corners_18"
         android:paddingTop="2dp"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_goneMarginStart="12dp">
+        app:layout_goneMarginStart="12dp"
+        tools:backgroundTint="#F1F2F6">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvUserName"
@@ -98,15 +99,16 @@
 
         <ViewStub
             android:id="@+id/viewReply"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
             android:layout_marginTop="5dp"
             android:layout="@layout/sceyt_recycler_reply_container"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvForwarded"
+            app:layout_goneMarginTop="8dp"
             tools:visibility="visible" />
 
         <com.sceyt.chatuikit.presentation.customviews.SceytClickableTextView
