--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_voice_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_voice_message.xml
@@ -45,13 +45,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:background="@drawable/sceyt_bg_inc_message"
+        android:background="@drawable/sceyt_bg_corners_18"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_goneMarginStart="12dp"
+        tools:backgroundTint="#F1F2F6"
         tools:layout_width="200dp">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -99,11 +100,11 @@
             android:id="@+id/viewReply"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
             android:layout_marginTop="8dp"
             android:layout="@layout/sceyt_recycler_reply_container"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvForwarded"
             tools:visibility="visible" />
