--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_attachments_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_attachments_message.xml
@@ -35,7 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/sceyt_bg_out_message">
+        android:background="@drawable/sceyt_bg_corners_18"
+        tools:backgroundTint="#E3E7FF">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvForwarded"
@@ -63,6 +64,7 @@
             android:id="@+id/viewReply"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
             android:layout_marginTop="8dp"
             android:layout="@layout/sceyt_recycler_reply_container"
             android:visibility="gone"
