--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_deleted_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_deleted_message.xml
@@ -21,7 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:background="@drawable/sceyt_bg_out_message">
+        android:background="@drawable/sceyt_bg_corners_18"
+        tools:backgroundTint="#E3E7FF">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/messageBody"
