--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <View
-        android:id="@+id/viewTop"
+        android:id="@+id/viewAttachments"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/sceyt_color_border"
@@ -23,19 +23,11 @@
         android:clipToPadding="false"
         android:orientation="horizontal"
         android:paddingHorizontal="16dp"
-        android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/sceyt_item_input_image_attachment" />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/groupAttachments"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="viewTop,rvAttachments" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/layoutReplyOrEditMessage"
