--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_description.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_description.xml
@@ -9,7 +9,7 @@
         android:id="@+id/layoutDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/sceyt_color_primary"
+        android:background="@color/sceyt_color_background_sections"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -42,6 +42,7 @@
             tools:text="Channel for planning annual meetings" />
 
         <View
+            android:id="@+id/border"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="10dp"
@@ -50,10 +51,11 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <View
-        android:id="@+id/divider"
+    <androidx.legacy.widget.Space
+        android:id="@+id/space"
         android:layout_width="match_parent"
-        android:layout_height="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/layoutDetails" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/layoutDetails"
+        tools:layout_height="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
