--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_details.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_details.xml
@@ -9,13 +9,14 @@
         android:id="@+id/layoutDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/sceyt_color_primary"
+        android:background="@color/sceyt_color_background_sections"
         app:layout_constraintTop_toTopOf="parent">
 
-        <View
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/dividerTop"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/sceyt_color_border"
+            app:dividerColor="@color/sceyt_color_border"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.sceyt.chatuikit.presentation.customviews.SceytAvatarView
@@ -65,11 +66,11 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <View
-        android:id="@+id/divider"
+    <androidx.legacy.widget.Space
+        android:id="@+id/space"
         android:layout_width="match_parent"
-        android:layout_height="16dp"
-        android:background="@color/sceyt_color_background_secondary"
-        app:layout_constraintTop_toBottomOf="@+id/layoutDetails" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/layoutDetails"
+        tools:layout_height="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
