--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_members_by_role.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_members_by_role.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/sceyt_color_background_sections"
     tools:context="com.sceyt.chatuikit.presentation.uicomponents.conversationinfo.membersbyrolebuttons.InfoMembersByRoleButtonsFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/members"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/sceyt_color_primary"
+        android:background="@drawable/sceyt_bg_ripple"
         android:drawableStart="@drawable/sceyt_ic_members"
         android:drawablePadding="16dp"
-        android:foreground="@drawable/sceyt_bg_ripple"
         android:gravity="center_vertical"
         android:paddingHorizontal="16dp"
         android:paddingVertical="10dp"
@@ -25,8 +25,8 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="UnusedAttribute" />
 
-    <View
-        android:id="@+id/dividerBetweenMembersAndAdmins"
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/borderBetweenMembersAndAdmins"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/sceyt_color_border"
@@ -36,10 +36,9 @@
         android:id="@+id/admins"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/sceyt_color_primary"
+        android:background="@drawable/sceyt_bg_ripple"
         android:drawableStart="@drawable/sceyt_ic_admin"
         android:drawablePadding="16dp"
-        android:foreground="@drawable/sceyt_bg_ripple"
         android:gravity="center_vertical"
         android:paddingHorizontal="16dp"
         android:paddingVertical="10dp"
@@ -48,11 +47,11 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dividerBetweenMembersAndAdmins"
+        app:layout_constraintTop_toBottomOf="@+id/borderBetweenMembersAndAdmins"
         tools:ignore="UnusedAttribute" />
 
-    <View
-        android:id="@+id/divider2"
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/borderBetweenAdminsAndSearch"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/sceyt_color_border"
@@ -62,10 +61,9 @@
         android:id="@+id/searchMessages"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/sceyt_color_primary"
+        android:background="@drawable/sceyt_bg_ripple"
         android:drawableStart="@drawable/sceyt_ic_search_messages"
         android:drawablePadding="16dp"
-        android:foreground="@drawable/sceyt_bg_ripple"
         android:gravity="center_vertical"
         android:paddingHorizontal="16dp"
         android:paddingVertical="10dp"
@@ -74,25 +72,19 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider2"
+        app:layout_constraintTop_toBottomOf="@+id/borderBetweenAdminsAndSearch"
         tools:ignore="UnusedAttribute" />
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/searchMessages" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group_channel_members"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="dividerBetweenMembersAndAdmins,members" />
+        app:constraint_referenced_ids="borderBetweenMembersAndAdmins,members" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group_channel_admins"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="divider2,admins" />
+        app:constraint_referenced_ids="borderBetweenAdminsAndSearch,admins" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
