--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_settings.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_settings.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/layoutDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/sceyt_color_primary"
@@ -25,8 +26,8 @@
             android:textSize="16sp"
             android:theme="@style/SceytSwitchStyle" />
 
-        <View
-            android:id="@+id/divider1"
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/border"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/sceyt_color_border"
@@ -51,10 +52,10 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <View
-        android:id="@+id/divider"
+    <androidx.legacy.widget.Space
+        android:id="@+id/space"
         android:layout_width="match_parent"
-        android:layout_height="16dp"
-        android:background="@color/sceyt_color_background" />
+        android:layout_height="wrap_content"
+        tools:layout_height="16dp" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
