--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_toolbar.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_toolbar.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
-    android:background="@color/sceyt_color_primary"
-    app:layout_constraintTop_toTopOf="parent">
+    android:background="@color/sceyt_color_primary">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icBack"
