--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -70,6 +70,7 @@
 
         <attr name="sceytUiMediaLoaderColor" format="reference|color" />
         <attr name="sceytUiVideoDurationIcon" format="reference" />
+        <attr name="sceytUiVoiceAttachmentIcon" format="reference" />
         <attr name="sceytUiFileAttachmentIcon" format="reference" />
         <attr name="sceytUiLinkAttachmentIcon" format="reference" />
 
