Add config to enable date separator items. Add config to set enable scroll down button.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -55,6 +55,9 @@
             <flag name="italic" value="2" />
         </attr>
 
+        <attr name="sceytUiEnableScrollDownButton" format="boolean"/>
+        <attr name="sceytUiEnableDateSeparator" format="boolean"/>
+
         <!--Background color -->
         <attr name="sceytUiMessageListBackgroundColor" format="reference|color" />
 
